--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,10 @@
 <html>
 <head>
-    <style src="../node_modules/bootstrap/css/bootstrap.css"></style>
-    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css" />
+    <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
     <!-- <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap-theme.css" /> -->
 </head>
 <body>
